src/objects/Carrier__c/fields/SupportsBusiness__c.field-meta.xml
<CustomField>
    <fullName>SupportsBusiness__c</fullName>
    <label>Professionnel</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>