src/objects/Carrier__c/fields/SupportsConsumers__c.field-meta.xml
<CustomField>
    <fullName>SupportsConsumers__c</fullName>
    <label>Particulier</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>